--- a/RETO 2/index.html
+++ b/RETO 2/index.html
@@ -88,13 +88,14 @@
                         </div>
                         
                         <!-- Pie de página -->
-                        <p class="mt-3 mb-3 text-muted" style="justify-content: center; display: flex;">Web creada por &nbsp;<A HREF="https://github.com/pachulujambio"> Valentín Lujambio </A></p>
+                        <p class="mt-3 mb-3 text-muted" style="justify-content: center; display: flex;">Web creada por &nbsp;<A HREF="https://github.com/Alejandro-cj"> Alejandro-cj </A></p>
                     </div>
                 </div>
                 </div>
             </div>
             </div>
         </div>
-       
+        <script src="reto 2/script.js"></script>
+
     </body>
 </html>
