--- a/RETO 2/index.html
+++ b/RETO 2/index.html
@@ -7,25 +7,7 @@
 
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
-        <style>
-            /* Fondo en degrade */
-            .gradient-custom {
-                background: linear-gradient(to bottom right, rgb(28, 174, 241), rgb(8, 104, 163))
-              }
-              .box{
-              display: flex !important;
-              justify-content: center;
-              width: 100%;
-              margin-bottom: 30px;
-              box-shadow: 3px 0px 30px rgba(0, 0, 0, 0.2);
-              padding: 30px 0px;
-            }
-            .navbar {
-                height: 60px;
-            }
-        </style>
-
+        <link rel="stylesheet" href="/RETO 2/style.css">
         <title>Reto #2 - El partido de tenis</title>
     </head>
     <body>
@@ -95,7 +77,7 @@
             </div>
             </div>
         </div>
-        <script src="reto 2/script.js"></script>
+        <script src="RETO 2/script.js"></script>
 
     </body>
 </html>
