--- a/RETO 2/index.html
+++ b/RETO 2/index.html
@@ -77,7 +77,7 @@
             </div>
             </div>
         </div>
-        <script src="RETO 2/script.js"></script>
+        <script src="RETO 2/script"></script>
 
     </body>
 </html>
